--- a/blueprint/web/index.html
+++ b/blueprint/web/index.html
@@ -32,7 +32,7 @@
  <div class="titlepage">
 <h1>Quadratic Forms in Lean 4</h1>
 <p class="authors">
-<span class="author">Jonathan Hanke</span>
+<span class="author">Jonathan Hanke and Yan Yablonovskiy</span>
 </p>
 </div> 
 </div> <!--main-text -->
